# School_management

./: README.md
idara-app/: .flaskenv  README.md  setup.cfg
idara-app/gic-thymine/: README.md
idara-app/idara/: __init__.py  auth.py  db.py
idara-app/idara/css/: idara-with-bootstrap.css
idara-app/idara/templates/: base.html  navbar.html
idara-app/idara/templates/auth/: login.html  register.html
idara-app/idara/templates/blog/: create.html  index.html  post-form.html  update.html
idara-app/idara/templates/profile/: user.html
idara-app/instance/: development.py  test.py
idara-app/sql/: populate.sql  schema-postgresql.sql
idara-app/tests/: conftest.py  test_idara.py
