[metadata]
name = idara
version = 0.1
#license = BSD-3-Clause
maintainer = Aya Bouguiri, Amine Abouch, Mohamed Hmamouch
maintainer_email = aya.bouguiri@...
description = flaksrpg est l'application flaskr adapté pour PostgreSQL (et mapping via l'ORM)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =

    # pour développer l'application Web
    Flask

    # pour lire les fichier .env (ou .flaskenv) 
    python-dotenv

    # pour l'accès à la base de données via l'ORM (SQLAlchemy)
    psycopg2-binary
    sqlalchemy

    # pour lier Flask et SQLALCHEMY 
    # Flask-SQLAlchemy-Session
    # (en fait, on utilise une version locale patchée)

    # pour gérer le dépôts d'images dans la base de données
    #Pillow
    
[options.extras_require]
test =
    # pour effectuer les tests de l'application
    pytest
    pytest-dotenv
    # pour mesurer le taux de couverture des tests
    coverage
build =
    # pour construire l'archive d'installation
    build
    
[tool:pytest]
testpaths = tests
env_files =
    .flaskenv
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
source =
    idara
